// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <p
      class="sc-bcXGCL bVtbqe cap-text"
    />
    <p>
      fc-title
    </p>
    <p />
    <div
      class="sc-cb1ada3e-1 hhWgMf"
      justifycontent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        title="FranceConnect"
      >
        <span
          class="loginIcon"
          style="line-height: inherit;"
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      class="sc-bcXGCL lhPwVY"
    >
      <a
        class="sc-bcXGCL cRTtob cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        class="sc-bcXGCL dMUThH cap-text"
      >
        login.or
      </div>
    </div>
  </div>
  <div>
    <div
      class="sc-cb1ada3e-0 kjkGMD"
      type="openId"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>
  <div>
    <div
      class="sc-cb1ada3e-0 dVooDa"
      type="cas"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>
  <div>
    <div
      class="sc-cb1ada3e-0 bJcmYL"
      type="saml"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>
  <hr
    class="sc-bcXGCL dxxsOW"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-cb1ada3e-0 lleybm"
      type="cas"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>
  <hr
    class="sc-bcXGCL dxxsOW"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `[Function]`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <p
      class="sc-bcXGCL bVtbqe cap-text"
    />
    <p>
      fc-title
    </p>
    <p />
    <div
      class="sc-cb1ada3e-1 hhWgMf"
      justifycontent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        title="FranceConnect"
      >
        <span
          class="loginIcon"
          style="line-height: inherit;"
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      class="sc-bcXGCL lhPwVY"
    >
      <a
        class="sc-bcXGCL cRTtob cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        class="sc-bcXGCL dMUThH cap-text"
      >
        login.or
      </div>
    </div>
  </div>
  <hr
    class="sc-bcXGCL dxxsOW"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-cb1ada3e-0 jHQgZD"
      type="openId"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>
  <hr
    class="sc-bcXGCL dxxsOW"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-cb1ada3e-0 cAWLYd"
      type="saml"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>
  <hr
    class="sc-bcXGCL dxxsOW"
  />
</DocumentFragment>
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div>
    <div
      class="sc-cb1ada3e-0 bODbyP"
      type="openId"
    >
      <span
        class="loginIcon"
        style="line-height: inherit;"
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
